reorganize packages, add source url as inline comments

--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <!-- https://www.nvidia.com/download/driverResults.aspx/119914/en-us -->
   <package id="geforce-game-ready-driver" />
+  <!-- https://www.nvidia.com/en-us/geforce/geforce-experience/ -->
   <package id="geforce-experience" />
+  <!-- https://store.steampowered.com/about/ -->
   <package id="steam" />
+  <!-- https://www.epicgames.com/store/en-US/ -->
   <package id="epicgameslauncher" />
+  <!-- https://www.origin.com/usa/en-us/store/download -->
+  <package id="origin" />
 </packages>
