--- a/packages/base.config
+++ b/packages/base.config
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <!-- https://git-scm.com/ -->
+  <package id="git.install" />
+  <!-- https://www.spotify.com/us/ -->
   <package id="spotify" />
+  <!-- https://slack.com/downloads/windows -->
   <package id="slack" />
+  <!-- https://discordapp.com/download -->
   <package id="discord.install" />
+  <!-- https://www.mozilla.org/en-US/firefox/new/ -->
   <package id="firefox" />
-  <package id="googlechrome" />
+  <!-- https://www.chromium.org/getting-involved/download-chromium -->
+  <package id="chromium" />
+  <!-- https://www.7-zip.org/download.html -->
   <package id="7zip.install" />
+  <!-- https://www.plex.tv/media-server-downloads/#plex-app -->
   <package id="plexmediaplayer" />
+  <!-- https://bitwarden.com/ -->
   <package id="bitwarden" />
+  <!-- https://www.alcpu.com/CoreTemp/ -->
   <package id="coretemp" />
+  <!-- https://www.cpuid.com/softwares/cpu-z.html -->
   <package id="cpu-z.install" />
+  <!-- http://www.uderzo.it/main_products/space_sniffer/ -->
   <package id="spacesniffer" />
+  <!-- https://app.prntscr.com/en/index.html -->
   <package id="lightshot.install" />
+  <package id="powertoys" />
+  <!-- https://code.visualstudio.com/ -->
+  <package id="vscode" />
+  <!-- https://docs.microsoft.com/en-us/powershell/scripting/install/installing-powershell-core-on-windows -->
+  <package id="powershell-core" />
+  <!-- https://docs.microsoft.com/en-us/windows/terminal/ -->
+  <package id="microsoft-windows-terminal" />
+  <!-- https://www.autohotkey.com/download/ -->
+  <package id="autohotkey.install" />
+  <!-- https://docs.microsoft.com/en-us/sysinternals/downloads/procmon -->
+  <package id="procmon" />
+  <!-- https://rufus.ie/ -->
+  <package id="rufus" />
+  <!-- https://authy.com/download/ -->
+  <package id="authy-desktop" />
 </packages>
