--- a/packages/dev.config
+++ b/packages/dev.config
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="git.install" />
-  <package id="vscode" />
-  <package id="autohotkey.install" />
+  <!-- https://nodejs.org/en/ -->
   <package id="nodejs-lts" />
+  <!-- https://yarnpkg.com/en/docs/install#windows-stable -->
   <package id="yarn" />
+  <!-- https://www.docker.com/get-started OR https://www.docker.com/products/docker-desktop -->
   <package id="docker-cli" />
+  <!-- https://docs.docker.com/compose/install/ -->
   <package id="docker-compose" />
+  <!-- https://kubernetes.io/docs/setup/learning-environment/minikube/ -->
   <package id="minikube" />
+  <!-- https://curl.haxx.se/ (note: remove the PowerShell (< version 6) alias:curl - https://superuser.com/a/890193/741304) -->
   <package id="curl" />
+  <!-- https://nmap.org/download.html -->
   <package id="nmap" />
-  <package id="procmon" />
-  <package id="rufus" />
+  <!-- https://github.com/tonsky/FiraCode -->
   <package id="firacode" />
+  <!-- https://github.com/adobe-fonts/source-code-pro -->
   <package id="sourcecodepro" />
 </packages>
