--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -10,6 +10,8 @@
   <package id="epicgameslauncher" />
   <!-- https://www.origin.com/usa/en-us/store/download -->
   <package id="origin" />
+  <!-- https://www.twitch.tv/downloads/ -->
+  <package id="twitch" />
   <!-- https://www.blizzard.com/en-us/download/confirmation?product=bnetdesk -->
   <!-- pkg is unavailable bc silent deployment option is not provided; see https://chocolatey.org/packages/battle.net -->
 </packages>
