--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <!-- https://www.nvidia.com/download/driverResults.aspx/119914/en-us -->
-  <package id="geforce-game-ready-driver" />
-  <!-- https://www.nvidia.com/en-us/geforce/geforce-experience/ -->
-  <package id="geforce-experience" />
+  <package id="nvidia-display-driver" />
   <!-- https://store.steampowered.com/about/ -->
   <package id="steam" />
   <!-- https://www.epicgames.com/store/en-US/ -->
