add git install params

--- a/packages/base.config
+++ b/packages/base.config
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <!-- https://git-scm.com/ -->
-  <package id="git.install" />
+  <package id="git"  packageParameters="/NoGuiHereIntegration /NoShellHereIntegration /WindowsTerminal" />
   <!-- https://www.spotify.com/us/ -->
   <package id="spotify" />
   <!-- https://slack.com/downloads/windows -->
   <package id="slack" />
   <!-- https://discordapp.com/download -->
-  <package id="discord.install" />
+  <package id="discord" />
   <!-- https://www.mozilla.org/en-US/firefox/new/ -->
   <package id="firefox" />
   <!-- https://www.chromium.org/getting-involved/download-chromium -->
   <package id="chromium" />
   <!-- https://www.7-zip.org/download.html -->
-  <package id="7zip.install" />
+  <package id="7zip" />
   <!-- https://www.plex.tv/media-server-downloads/#plex-app -->
   <package id="plexmediaplayer" />
   <!-- https://bitwarden.com/ -->
@@ -21,11 +21,12 @@
   <!-- https://www.alcpu.com/CoreTemp/ -->
   <package id="coretemp" />
   <!-- https://www.cpuid.com/softwares/cpu-z.html -->
-  <package id="cpu-z.install" />
+  <package id="cpu-z" />
   <!-- http://www.uderzo.it/main_products/space_sniffer/ -->
   <package id="spacesniffer" />
   <!-- https://app.prntscr.com/en/index.html -->
-  <package id="lightshot.install" />
+  <package id="lightshot" />
+  <!-- https://github.com/microsoft/PowerToys -->
   <package id="powertoys" />
   <!-- https://code.visualstudio.com/ -->
   <package id="vscode" />
@@ -34,7 +35,7 @@
   <!-- https://docs.microsoft.com/en-us/windows/terminal/ -->
   <package id="microsoft-windows-terminal" />
   <!-- https://www.autohotkey.com/download/ -->
-  <package id="autohotkey.install" />
+  <package id="autohotkey" />
   <!-- https://docs.microsoft.com/en-us/sysinternals/downloads/procmon -->
   <package id="procmon" />
   <!-- https://rufus.ie/ -->
