--- a/packages/base.config
+++ b/packages/base.config
@@ -42,4 +42,6 @@
   <package id="rufus" />
   <!-- https://authy.com/download/ -->
   <package id="authy-desktop" />
+  <!-- https://www.vim.org/ -->
+  <package id="vim" />
 </packages>
