--- a/packages/base.config
+++ b/packages/base.config
@@ -9,7 +9,7 @@
   <!-- https://discordapp.com/download -->
   <package id="discord" />
   <!-- https://www.mozilla.org/en-US/firefox/new/ -->
-  <package id="firefox" />
+  <package id="firefox" packageParameters="/NoTaskbarShortcut /NoDesktopShortcut" />
   <!-- https://www.chromium.org/getting-involved/download-chromium -->
   <package id="chromium" />
   <!-- https://www.7-zip.org/download.html -->
@@ -29,7 +29,7 @@
   <!-- https://github.com/microsoft/PowerToys -->
   <package id="powertoys" />
   <!-- https://code.visualstudio.com/ -->
-  <package id="vscode" />
+  <package id="vscode" packageParameters="/NoDesktopIcon /NoQuicklaunchIcon" />
   <!-- https://docs.microsoft.com/en-us/powershell/scripting/install/installing-powershell-core-on-windows -->
   <package id="powershell-core" />
   <!-- https://docs.microsoft.com/en-us/windows/terminal/ -->
@@ -43,5 +43,5 @@
   <!-- https://authy.com/download/ -->
   <package id="authy-desktop" />
   <!-- https://www.vim.org/ -->
-  <package id="vim" />
+  <package id="vim" packageParameters="/NoDesktopShortcuts /NoContextmenu" />
 </packages>
