--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -12,6 +12,8 @@
   <package id="twitch" />
   <!-- https://www.gogalaxy.com/ -->
   <package id="goggalaxy" />
+  <!-- https://ubisoftconnect.com/en-US/ -->
+  <package id="uplay" />
   <!-- https://www.blizzard.com/en-us/download/confirmation?product=bnetdesk -->
   <!-- pkg is unavailable bc silent deployment option is not provided; see https://chocolatey.org/packages/battle.net -->
 </packages>
