use vortex instead of nmm

--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -16,6 +16,6 @@
   <package id="uplay" />
   <!-- https://www.blizzard.com/en-us/download/confirmation?product=bnetdesk -->
   <!-- pkg is unavailable bc silent deployment option is not provided; see https://chocolatey.org/packages/battle.net -->
-  <!-- https://www.nexusmods.com/about/vortex/ -->
-  <package id="nmm" />
+  <!-- https://www.nexusmods.com/site/mods/1/ -->
+  <package id="vortex" />
 </packages>
