--- a/packages/dev.config
+++ b/packages/dev.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <!-- https://nodejs.org/en/ -->
-  <package id="nodejs-lts" />
+  <!-- https://github.com/coreybutler/nvm-windows -->
+  <package id="nvm" />
   <!-- https://yarnpkg.com/en/docs/install#windows-stable -->
   <package id="yarn" />
   <!-- https://www.docker.com/get-started OR https://www.docker.com/products/docker-desktop -->
