--- a/packages/base.config
+++ b/packages/base.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <!-- https://git-scm.com/ -->
-  <package id="git"  packageParameters="/NoGuiHereIntegration /NoShellHereIntegration /WindowsTerminal" />
+  <package id="git" packageParameters="/NoGuiHereIntegration /NoShellHereIntegration /WindowsTerminal" />
   <!-- https://www.spotify.com/us/ -->
   <package id="spotify" />
   <!-- https://slack.com/downloads/windows -->
@@ -44,4 +44,6 @@
   <package id="authy-desktop" />
   <!-- https://www.vim.org/ -->
   <package id="vim" packageParameters="/NoDesktopShortcuts /NoContextmenu" />
+  <!-- https://vb-audio.com/Voicemeeter/banana.htm -->
+  <package id="voicemeeter-banana" />
 </packages>
