add iperf to dev packages

--- a/packages/dev.config
+++ b/packages/dev.config
@@ -18,4 +18,6 @@
   <package id="firacode" />
   <!-- https://github.com/adobe-fonts/source-code-pro -->
   <package id="sourcecodepro" />
+  <!-- https://iperf.fr/ -->
+  <package id="iperf3" />
 </packages>
