--- a/packages/base.config
+++ b/packages/base.config
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <!-- https://git-scm.com/ -->
-  <package id="git" packageParameters="/NoGuiHereIntegration /NoShellHereIntegration /WindowsTerminal" />
+  <package id="git"
+    packageParameters="/NoGuiHereIntegration /NoShellHereIntegration /WindowsTerminal" />
+  <!-- https://www.autohotkey.com/download/ -->
+  <package id="autohotkey" />
   <!-- https://www.spotify.com/us/ -->
   <package id="spotify" />
-  <!-- https://slack.com/downloads/windows -->
-  <package id="slack" />
   <!-- https://discordapp.com/download -->
   <package id="discord" />
   <!-- https://www.mozilla.org/en-US/firefox/new/ -->
@@ -15,9 +16,7 @@
   <!-- https://www.7-zip.org/download.html -->
   <package id="7zip" />
   <!-- https://www.plex.tv/media-server-downloads/#plex-app -->
-  <package id="plexmediaplayer" />
-  <!-- https://bitwarden.com/ -->
-  <package id="bitwarden" />
+  <package id="plex" />
   <!-- https://www.alcpu.com/CoreTemp/ -->
   <package id="coretemp" />
   <!-- https://www.cpuid.com/softwares/cpu-z.html -->
@@ -30,20 +29,12 @@
   <package id="powertoys" />
   <!-- https://code.visualstudio.com/ -->
   <package id="vscode" packageParameters="/NoDesktopIcon /NoQuicklaunchIcon" />
-  <!-- https://docs.microsoft.com/en-us/powershell/scripting/install/installing-powershell-core-on-windows -->
-  <package id="powershell-core" />
-  <!-- https://docs.microsoft.com/en-us/windows/terminal/ -->
-  <package id="microsoft-windows-terminal" />
-  <!-- https://www.autohotkey.com/download/ -->
-  <package id="autohotkey" />
   <!-- https://docs.microsoft.com/en-us/sysinternals/downloads/procmon -->
   <package id="procmon" />
   <!-- https://rufus.ie/ -->
   <package id="rufus" />
-  <!-- https://authy.com/download/ -->
-  <package id="authy-desktop" />
   <!-- https://www.vim.org/ -->
   <package id="vim" packageParameters="/NoDesktopShortcuts /NoContextmenu" />
-  <!-- https://vb-audio.com/Voicemeeter/banana.htm -->
-  <package id="voicemeeter-banana" />
+  <!-- https://github.com/RamonUnch/AltSnap -->
+  <package id="altsnap" />
 </packages>
