--- a/packages/dev.config
+++ b/packages/dev.config
@@ -10,7 +10,8 @@
   <package id="docker-compose" />
   <!-- https://kubernetes.io/docs/setup/learning-environment/minikube/ -->
   <package id="minikube" />
-  <!-- https://curl.haxx.se/ (note: remove the PowerShell (< version 6) alias:curl - https://superuser.com/a/890193/741304) -->
+  <!-- https://curl.haxx.se/ (note: remove the PowerShell (< version 6) alias:curl -
+  https://superuser.com/a/890193/741304) -->
   <package id="curl" />
   <!-- https://nmap.org/download.html -->
   <package id="nmap" />
@@ -20,4 +21,6 @@
   <package id="sourcecodepro" />
   <!-- https://iperf.fr/ -->
   <package id="iperf3" />
+  <!-- https://learn.microsoft.com/en-us/sysinternals/ -->
+  <package id="sysinternals" />
 </packages>
