--- a/packages/gaming.config
+++ b/packages/gaming.config
@@ -2,6 +2,7 @@
 <packages>
   <!-- https://www.nvidia.com/download/driverResults.aspx/119914/en-us -->
   <package id="nvidia-display-driver" />
+  <package id="nvidia-geforce-now" />
   <!-- https://store.steampowered.com/about/ -->
   <package id="steam" />
   <!-- https://www.epicgames.com/store/en-US/ -->
@@ -12,8 +13,14 @@
   <package id="goggalaxy" />
   <!-- https://ubisoftconnect.com/en-US/ -->
   <package id="uplay" />
-  <!-- https://www.blizzard.com/en-us/download/confirmation?product=bnetdesk -->
-  <!-- pkg is unavailable bc silent deployment option is not provided; see https://chocolatey.org/packages/battle.net -->
   <!-- https://www.nexusmods.com/site/mods/1/ -->
   <package id="vortex" />
+  <!-- https://support.logitech.com/en_us/software/options -->
+  <package id="logitech-options" />
+  <!-- https://vb-audio.com/Voicemeeter/banana.htm -->
+  <package id="voicemeeter-banana" />
 </packages>
+
+<!-- https://www.blizzard.com/en-us/download/confirmation?product=bnetdesk -->
+<!-- pkg is unavailable bc silent deployment option is not provided; see
+https://chocolatey.org/packages/battle.net -->
