--- a/packages/base.config
+++ b/packages/base.config
@@ -37,4 +37,6 @@
   <package id="vim" packageParameters="/NoDesktopShortcuts /NoContextmenu" />
   <!-- https://github.com/RamonUnch/AltSnap -->
   <package id="altsnap" />
+  <!-- https://www.almico.com/speedfan.php -->
+  <package id="speedfan" />
 </packages>
