add tv packages

--- a/packages/tv.config
+++ b/packages/tv.config
@@ -4,4 +4,10 @@
   <package id="plexmediaplayer" />
   <!-- https://jellyfin.org/downloads/clients/ -->
   <package id="jellyfin-media-player" />
+  <!-- https://www.videolan.org/vlc/ -->
+  <package id="vlc" />
+  <!-- https://www.unifiedremote.com/ -->
+  <package id="unifiedremote" />
+  <!-- https://learn.microsoft.com/en-us/sysinternals/downloads/autologon -->
+  <package id="autologon" />
 </packages>
